[FIX] trackercalendar: Give the calendar div a minimum height and show busy until it's loaded (not showing for me yet though)

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -2792,6 +2792,9 @@ a.fc-event:hover {
   .col1 .table-responsive > .caltable .weeks {
     padding: 8px;
   }
+  .wp-trackercalendar {
+    min-height: 30em;
+  }
 }
 @media (max-width: 767.98px) {
   .tiki_calendar .col1 #editcalitem .modal-body {
